--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# DataSource settings: set your own properties
+# DataSource settings
 spring.datasource.url=jdbc:mysql://localhost:3306/user_feed
 spring.datasource.username=root
 spring.datasource.password=new_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Specify the JPA dialect
+# the JPA dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
