--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
-# DataSource settings
+# DataSource settings: set your own properties
 spring.datasource.url=jdbc:mysql://localhost:3306/user_feed
 spring.datasource.username=root
 spring.datasource.password=new_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# the JPA dialect
+# Specify the JPA dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+
 
 application.post-service.url = http://localhost:8081/api/v1/posts
 
 server.port=8085
+
+feedLimit = 200
