--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# DataSource settings: set your own properties
+# DataSource settings
 spring.datasource.url=jdbc:mysql://localhost:3306/user_feed
 spring.datasource.username=root
 spring.datasource.password=new_password
